# Rn-MOS

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  csmos.jks  lint-baseline.xml  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: CSMOS_1.12.dm  CSMOS_v6.5 r2.dm  CSMOS_v6.5 r3.dm  CSMOS_v6.5.dm
app/release/baselineProfiles/1/: CSMOS_1.12.dm  CSMOS_v6.5 r2.dm  CSMOS_v6.5 r3.dm  CSMOS_v6.5.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/csmos/: CMakeLists.txt  addresses.h  hooks.cpp  java.cpp  java.h  main.cpp  main.h  patches.cpp  structs.h
app/src/main/res/layout/: activity_directory_choice.xml  activity_launcher.xml  compose_collapsing.xml  launch_app_screen.xml  layout_compose.xml  update_notify.xml  view_toast.xml
app/src/main/res/mipmap-anydpi-v26/: rn_logo.xml
app/src/main/res/values-night-v23/: themes.xml
gradle/: libs.versions.toml  libs.versions.toml.bak
gradle/wrapper/: gradle-wrapper.properties
stuff/resources/: AndroidManifest.xml  classes.dex
stuff/resources/res/layout/: activity_directory_choice.xml  activity_launcher.xml  directory.xml  spinner_item_v8.xml  update_notify.xml
stuff/resources/res/layout-v21/: activity_launcher.xml
stuff/resources/res/values/: public.xml  strings.xml
stuff/resources/res/values-ru/: strings.xml
stuff/resources/res/values-zh-rTW/: strings.xml
stuff/sources/me/nillerusr/: DirchActivity.java  ExtractAssets.java  LauncherActivity.java
(+117 files in other folders)
